set(ZEPHA_SRC
    game/graph/meshtypes/ChunkMesh.cpp
    game/graph/meshtypes/ChunkMesh.h
    game/entity/Entity.cpp
    game/entity/Entity.h
    game/graph/shader/Shader.cpp
    game/graph/shader/Shader.h
    game/graph/window/Window.cpp
    game/graph/window/Window.h
    game/graph/Camera.cpp
    game/graph/Camera.h
    game/graph/Texture.cpp
    game/graph/Texture.h
    game/scene/world/graph/MeshGenerator.cpp
    game/scene/world/graph/MeshGenerator.h
    util/Timer.cpp
    util/Timer.h
    def/LocalDefinitionAtlas.cpp
    def/LocalDefinitionAtlas.h
    def/item/MeshPart.cpp
    def/item/MeshPart.h
    def/item/ShaderMod.h
    def/item/BlockModelVertex.h
    game/scene/world/LocalWorld.cpp
    game/scene/world/LocalWorld.h
    world/chunk/BlockChunk.cpp
    world/chunk/BlockChunk.h
    game/scene/world/graph/MeshChunk.cpp
    game/scene/world/graph/MeshChunk.h
    game/scene/GameScene.cpp
    game/scene/GameScene.h
    game/graph/Renderer.cpp
    game/graph/Renderer.h
    lua/parser/LocalLuaParser.cpp
    lua/parser/LocalLuaParser.h
    game/hud/components/basic/GuiText.cpp
    game/hud/components/basic/GuiText.h
    game/hud/DebugGui.cpp
    game/hud/DebugGui.h
    game/scene/world/Player.cpp
    game/scene/world/Player.h
    util/Ray.cpp
    util/Ray.h
    game/Client.cpp
    game/Client.h
    game/graph/scene/SceneManager.cpp
    game/graph/scene/SceneManager.h
    game/graph/scene/Scene.h
    game/ClientState.h
    game/scene/MainMenuScene.cpp
    game/scene/MainMenuScene.h
    server/Server.cpp
    server/Server.h
    util/net/Packet.cpp
    util/net/Packet.h
    game/scene/net/ClientNetworkInterpreter.cpp
    game/scene/net/ClientNetworkInterpreter.h
    def/gen/MapGen.cpp
    def/gen/MapGen.h
    util/net/NetHandler.cpp
    util/net/NetHandler.h
    game/hud/GameGui.cpp
    game/hud/GameGui.h
    server/conn/ClientList.cpp
    server/conn/ClientList.h
    server/conn/ServerClient.h
    util/net/PacketChannel.h
    game/entity/engine/PlayerEntity.h
    game/hud/components/basic/GuiRect.cpp
    game/hud/components/basic/GuiRect.h
    game/hud/components/basic/GuiGraph.cpp
    game/hud/components/basic/GuiGraph.h
    def/gen/MapGenJob.h
    util/Interp.h
    def/gen/NoiseSample.cpp
    def/gen/NoiseSample.h
    game/graph/frustum/Frustum.cpp
    game/graph/frustum/Frustum.h
    game/graph/frustum/FrustumPlane.cpp
    game/graph/frustum/FrustumPlane.h
    game/graph/frustum/FrustumAABB.cpp
    game/graph/frustum/FrustumAABB.h
    server/world/ServerWorld.cpp
    server/world/ServerWorld.h
    server/world/WorldGenStream.cpp
    server/world/WorldGenStream.h
    game/scene/world/WorldInterpolationStream.cpp
    game/scene/world/WorldInterpolationStream.h
    util/Space.h
    game/scene/world/MeshGenStream.cpp
    game/scene/world/MeshGenStream.h
    util/Vec.h
    world/LocalDimension.cpp
    world/LocalDimension.h
    world/region/Region.h
    game/entity/engine/WireframeEntity.cpp
    game/entity/engine/WireframeEntity.h
    def/item/SelectionBox.h
    game/graph/drawable/Drawable.h
    game/graph/drawable/DrawableGroup.cpp
    game/graph/drawable/DrawableGroup.h
    game/graph/window/Input.cpp
    game/graph/window/Input.h
    game/entity/engine/BlockCrackEntity.cpp
    game/entity/engine/BlockCrackEntity.h
    def/texture/TextureAtlas.cpp
    def/texture/TextureAtlas.h
    def/texture/AtlasRef.h
    world/region/MapBlock.h
    def/ClientGame.cpp
    def/ClientGame.h
    world/region/Region.cpp
    world/region/MapBlock.cpp
    util/Util.h
    world/block/PointedThing.h
    game/hud/components/compound/GuiLabelledGraph.cpp
    game/hud/components/compound/GuiLabelledGraph.cpp
    game/entity/engine/ParticleEntity.cpp
    game/entity/engine/ParticleEntity.h
    def/ServerGame.cpp
    def/ServerGame.h
    def/ServerDefinitionAtlas.cpp
    def/ServerDefinitionAtlas.h
    def/item/BlockDef.cpp
    def/item/BlockDef.h
    util/Dir.h
    def/DefinitionAtlas.h
    lua/LuaParser.cpp
    lua/LuaParser.h
    lua/parser/ServerLuaParser.cpp
    lua/parser/ServerLuaParser.h
    util/Log.h
    lua/Callback.h
    game/graph/shader/GuiUniforms.h
    game/graph/meshtypes/EntityMesh.cpp
    game/graph/meshtypes/EntityMesh.h
    server/conn/ServerClient.cpp
    server/config/ServerConfig.cpp
    server/config/ServerConfig.h
    util/net/PacketType.h
    util/net/NetState.h
    game/scene/ConnectScene.cpp
    game/scene/ConnectScene.h
    util/net/Address.h
    game/scene/net/ServerConnection.cpp
    game/scene/net/ServerConnection.h
    game/scene/world/MeshDetails.h
    game/hud/components/GuiComponent.cpp
    game/hud/components/GuiComponent.h
    game/hud/components/basic/GuiContainer.cpp
    game/hud/components/basic/GuiContainer.h
    lua/LuaModFile.h
    lua/LuaMod.h
    lua/LuaModConfig.h
    server/asset/ServerTexture.h
    server/asset/AssetStorage.h
    lua/LuaMod.cpp
    def/ItemDef.h
    def/DefinitionAtlas.cpp
    def/item/BlockModel.h
    def/texture/Font.cpp
    def/texture/Font.h
    game/entity/Model.cpp
    game/entity/Model.h
    game/graph/meshtypes/EntityVertex.h
    game/graph/meshtypes/ChunkVertex.h
    game/graph/meshtypes/Mesh.cpp
    game/graph/meshtypes/Mesh.h
    util/Mat4Conv.h
    game/entity/ModelBone.cpp
    game/entity/ModelBone.h
    game/entity/ModelAnimation.cpp
    game/entity/ModelAnimation.h
    game/entity/AnimChannel.cpp
    game/entity/AnimChannel.h
    game/entity/AnimationState.cpp
    game/entity/AnimationState.h
    game/entity/AnimationSegment.h
    lua/api/usertype/cLuaEntity.h
    StartGame.h
    game/graph/shader/SSAOShader.cpp
    game/graph/shader/SSAOShader.h
    game/graph/shader/BlurShader.cpp
    game/graph/shader/BlurShader.h
    game/graph/shader/LightingShader.cpp
    game/graph/shader/LightingShader.h
    game/graph/shader/WorldGeometryShader.cpp
    game/graph/shader/WorldGeometryShader.h
    game/graph/shader/EntityGeometryShader.cpp
    game/graph/shader/EntityGeometryShader.h
    game/scene/world/graph/ChunkRenderElem.h
    world/ServerDimension.cpp
    world/ServerDimension.h
    def/item/CraftItemDef.cpp
    def/item/CraftItemDef.h
    lua/api/modules/add_entity.h
    lua/api/class/LocalLuaEntity.cpp
    lua/api/class/LocalLuaEntity.h
    def/model/SerializedModel.h
    server/asset/AssetType.h
    def/model/ModelStore.h
    lua/api/modules/remove_entity.h
    lua/api/functions/update_entities.h
    lua/api/modules/register_keybind.h
    lua/LuaInputManager.cpp
    lua/LuaInputManager.h
    lua/api/usertype/cLocalPlayer.h
    lua/api/class/LocalLuaPlayer.cpp
    lua/api/class/LocalLuaPlayer.h
    game/entity/Collidable.cpp
    game/entity/Collidable.h
    game/hud/components/compound/GuiInventoryList.cpp
    game/hud/components/compound/GuiInventoryList.h
    game/hud/components/basic/GuiInventoryItem.cpp
    game/hud/components/basic/GuiInventoryItem.h
    game/scene/world/InventoryList.cpp
    game/scene/world/InventoryList.h
    game/scene/world/ItemStack.h
    server/LocalServerInstance.cpp
    server/LocalServerInstance.h
    game/hud/SerialGui.h
    util/Voronoi3D.cpp
    util/Voronoi3D.h
    def/gen/BiomeDef.cpp
    def/gen/BiomeDef.h
    def/gen/BiomeAtlas.cpp
    def/gen/BiomeAtlas.h
    def/gen/ServerBiomeAtlas.cpp
    def/gen/ServerBiomeAtlas.h
    def/gen/LocalBiomeAtlas.cpp
    def/gen/LocalBiomeAtlas.h
    world/Dimension.cpp
    world/Dimension.h
    def/texture/RawTexData.h
    game/hud/components/compound/GuiImageButton.cpp
    game/hud/components/compound/GuiImageButton.h
    game/ClientState.cpp
    game/scene/menu/Subgame.cpp
    game/scene/menu/Subgame.h
    game/scene/menu/SubgameConfig.h
    game/scene/menu/MenuSandbox.cpp
    game/scene/menu/MenuSandbox.h
    lua/api/menu/mDelay.h
    lua/api/menu/mSetGui.h
    game/hud/GuiBuilder.cpp
    game/hud/GuiBuilder.h
    game/hud/GameGuiBuilder.cpp
    game/hud/GameGuiBuilder.h
    lua/api/menu/mStartGame.h
    lua/api/class/ServerLuaInventoryList.cpp
    lua/api/class/ServerLuaInventoryList.h
    lua/api/class/ServerLuaInventory.cpp
    lua/api/class/ServerLuaInventory.h
    game/scene/world/Inventory.cpp
    game/scene/world/Inventory.h
    lua/api/class/LuaItemStack.cpp
    lua/api/class/LuaItemStack.h
    game/scene/world/ItemStack.cpp
    lua/api/usertype/cInventoryRef.h
    lua/api/usertype/cItemStack.h
    game/hud/components/basic/GuiModel.cpp
    game/hud/components/basic/GuiModel.h
    server/world/ServerEntity.cpp
    server/world/ServerEntity.h
    lua/api/class/ServerLuaEntity.cpp
    lua/api/class/ServerLuaEntity.h
    game/scene/LuaErrorScene.cpp
    game/scene/LuaErrorScene.h
    lua/api/usertype/sLuaEntity.h
    util/net/Serializer.h
    util/net/Deserializer.h
    lua/api/class/ServerLocalLuaEntity.cpp
    lua/api/class/ServerLocalLuaEntity.h
    lua/api/modules/register_item.h
    lua/api/modules/register_biome.h
    lua/api/modules/delay.h
    lua/api/modules/register_block.h
    lua/api/modules/register_blockmodel.h
    lua/api/modules/register_entity.h
    game/scene/world/World.cpp
    game/scene/world/World.h
    lua/api/modules/set_block.h
    lua/api/modules/get_block.h
    lua/api/modules/remove_block.h
    lua/register/RegisterBiomes.h
    lua/register/RegisterBlocks.h
    lua/register/RegisterItems.h
    lua/register/RegisterKeybinds.h
    lua/api/class/LocalLuaAnimationManager.cpp
    lua/api/class/LocalLuaAnimationManager.h
    lua/api/usertype/cAnimationManager.h
    game/scene/world/Schematic.cpp
    game/scene/world/Schematic.h
    lua/VenusParser.cpp
    lua/VenusParser.h
    lua/ErrorFormatter.cpp
    lua/ErrorFormatter.h
    util/RIE.h
    lua/api/class/ServerLuaPlayer.cpp
    lua/api/class/ServerLuaPlayer.h
    lua/api/usertype/sServerPlayer.h
    lua/api/modules/register_on.h
    lua/api/functions/trigger_event.h
    lua/parser/ServerModHandler.cpp
    lua/parser/ServerModHandler.h
    lua/parser/LocalModHandler.cpp
    lua/parser/LocalModHandler.h
    game/scene/net/NetPlayerField.h
    game/scene/world/LocalInventoryRefs.cpp
    game/scene/world/LocalInventoryRefs.h
    game/scene/world/LocalInventory.cpp
    game/scene/world/LocalInventory.h
    lua/api/class/LocalLuaInventory.cpp
    lua/api/class/LocalLuaInventory.h
    lua/api/class/LocalLuaInventoryList.cpp
    lua/api/class/LocalLuaInventoryList.h)

add_library (Zepha_Core ${ZEPHA_SRC})