add_library(Zepha_Core
	def/DefinitionAtlas.cpp
	def/DefinitionAtlas.h
	def/gen/BiomeAtlas.cpp
	def/gen/BiomeAtlas.h
	def/gen/BiomeDef.cpp
	def/gen/BiomeDef.h
	def/gen/LocalBiomeAtlas.cpp
	def/gen/LocalBiomeAtlas.h
	def/gen/MapGen.cpp
	def/gen/MapGen.h
	def/gen/MapGenProps.cpp
	def/gen/MapGenProps.h
	def/gen/NoiseSample.cpp
	def/gen/NoiseSample.h
	def/gen/ServerBiomeAtlas.cpp
	def/gen/ServerBiomeAtlas.h
	def/item/BlockDef.cpp
	def/item/BlockDef.h
	def/item/BlockModel.cpp
	def/item/BlockModel.h
	def/item/BlockModelVertex.h
	def/item/CraftItemDef.cpp
	def/item/CraftItemDef.h
	def/item/MeshPart.cpp
	def/item/MeshPart.h
	def/item/SelectionBox.h
	def/item/ShaderMod.h
	def/ItemDef.h
	def/LocalDefinitionAtlas.cpp
	def/LocalDefinitionAtlas.h
	def/LocalSubgame.cpp
	def/LocalSubgame.h
	def/model/ModelStore.h
	def/model/SerializedModel.h
	def/ServerDefinitionAtlas.cpp
	def/ServerDefinitionAtlas.h
	def/ServerSubgame.cpp
	def/ServerSubgame.h
	def/Subgame.h
	def/texture/AtlasRef.h
	def/texture/Font.cpp
	def/texture/Font.h
        def/texture/TextureAtlas.cpp
	def/texture/TextureAtlas.h
	game/Client.cpp
	game/Client.h
	game/ClientState.cpp
	game/ClientState.h
	game/entity/AnimationSegment.h
	game/entity/AnimationState.cpp
	game/entity/AnimationState.h
	game/entity/AnimChannel.cpp
	game/entity/AnimChannel.h
	game/entity/engine/ParticleEntity.cpp
	game/entity/engine/ParticleEntity.h
	game/entity/engine/PlayerEntity.h
	game/entity/engine/WireframeEntity.cpp
	game/entity/engine/WireframeEntity.h
	game/entity/DrawableEntity.cpp
	game/entity/DrawableEntity.h
	game/entity/Model.cpp
	game/entity/Model.h
	game/entity/ModelAnimation.cpp
	game/entity/ModelAnimation.h
	game/entity/ModelBone.cpp
	game/entity/ModelBone.h
	game/graph/Camera.cpp
	game/graph/Camera.h
	game/graph/drawable/Drawable.h
	game/graph/drawable/DrawableGroup.cpp
	game/graph/drawable/DrawableGroup.h
	game/graph/frustum/Frustum.cpp
	game/graph/frustum/Frustum.h
	game/graph/frustum/FrustumAABB.cpp
	game/graph/frustum/FrustumAABB.h
	game/graph/frustum/FrustumPlane.cpp
	game/graph/frustum/FrustumPlane.h
	game/graph/meshtypes/ChunkMesh.cpp
	game/graph/meshtypes/ChunkMesh.h
	game/graph/meshtypes/ChunkVertex.h
	game/graph/meshtypes/EntityMesh.cpp
	game/graph/meshtypes/EntityMesh.h
	game/graph/meshtypes/EntityVertex.h
	game/graph/meshtypes/Mesh.cpp
	game/graph/meshtypes/Mesh.h
	game/graph/Renderer.cpp
	game/graph/Renderer.h
	game/graph/scene/Scene.h
	game/graph/scene/SceneManager.cpp
	game/graph/scene/SceneManager.h
	game/graph/shader/BlurShader.cpp
	game/graph/shader/BlurShader.h
	game/graph/shader/EntityGeometryShader.cpp
	game/graph/shader/EntityGeometryShader.h
	game/graph/shader/GuiUniforms.h
	game/graph/shader/LightingShader.cpp
	game/graph/shader/LightingShader.h
	game/graph/shader/Shader.cpp
	game/graph/shader/Shader.h
	game/graph/shader/SSAOShader.cpp
	game/graph/shader/SSAOShader.h
	game/graph/shader/WorldGeometryShader.cpp
	game/graph/shader/WorldGeometryShader.h
	game/graph/Texture.cpp
	game/graph/Texture.h
	game/graph/window/Input.cpp
	game/graph/window/Input.h
	game/graph/window/Window.cpp
	game/graph/window/Window.h
	game/hud/components/basic/GuiContainer.cpp
	game/hud/components/basic/GuiContainer.h
	game/hud/components/basic/GuiGraph.cpp
	game/hud/components/basic/GuiGraph.h
	game/hud/components/basic/GuiInventoryItem.cpp
	game/hud/components/basic/GuiInventoryItem.h
	game/hud/components/basic/GuiModel.cpp
	game/hud/components/basic/GuiModel.h
	game/hud/components/basic/GuiRect.cpp
	game/hud/components/basic/GuiRect.h
	game/hud/components/basic/GuiText.cpp
	game/hud/components/basic/GuiText.h
	game/hud/components/compound/GuiImageButton.cpp
	game/hud/components/compound/GuiImageButton.h
	game/hud/components/compound/GuiInventoryList.cpp
	game/hud/components/compound/GuiInventoryList.h
	game/hud/components/compound/GuiLabelledGraph.cpp
	game/hud/components/compound/GuiLabelledGraph.cpp
	game/hud/components/GuiComponent.cpp
	game/hud/components/GuiComponent.h
	game/hud/DebugGui.cpp
	game/hud/DebugGui.h
	game/hud/GameGui.cpp
	game/hud/GameGui.h
	game/hud/GameGuiBuilder.cpp
	game/hud/GameGuiBuilder.h
	game/hud/GuiBuilder.cpp
	game/hud/GuiBuilder.h
	game/hud/SerialGui.h
	game/inventory/ServerInventory.cpp
	game/inventory/ServerInventory.h
	game/inventory/InventoryList.cpp
	game/inventory/InventoryList.h
	game/inventory/ServerInventoryRefs.cpp
	game/inventory/ServerInventoryRefs.h
	game/inventory/ItemStack.cpp
	game/inventory/ItemStack.h
	game/inventory/LocalInventory.cpp
	game/inventory/LocalInventory.h
	game/inventory/LocalInventoryRefs.cpp
	game/inventory/LocalInventoryRefs.h
	game/inventory/ServerInventoryList.cpp
	game/inventory/ServerInventoryList.h
	game/scene/ConnectScene.cpp
	game/scene/ConnectScene.h
	game/scene/GameScene.cpp
	game/scene/GameScene.h
	game/scene/LuaErrorScene.cpp
	game/scene/LuaErrorScene.h
	game/scene/MainMenuScene.cpp
	game/scene/MainMenuScene.h
	game/scene/menu/MenuSandbox.cpp
	game/scene/menu/MenuSandbox.h
	game/scene/menu/SubgameConfig.h
	game/scene/menu/SubgameDef.h
	game/scene/world/ChunkMeshDetails.h
	game/scene/world/graph/ChunkMeshGenerator.cpp
	game/scene/world/graph/ChunkMeshGenerator.h
	game/scene/world/graph/ChunkRenderElem.h
	game/scene/world/graph/MeshChunk.cpp
	game/scene/world/graph/MeshChunk.h
	game/scene/world/LocalWorld.cpp
	game/scene/world/LocalWorld.h
	game/scene/world/MeshGenStream.cpp
	game/scene/world/MeshGenStream.h
	game/scene/world/LocalPlayer.cpp
	game/scene/world/LocalPlayer.h
	game/scene/world/Schematic.cpp
	game/scene/world/Schematic.h
	game/scene/world/World.cpp
	game/scene/world/World.h
	game/scene/world/WorldInterpolationStream.cpp
	game/scene/world/WorldInterpolationStream.h
	lua/Callback.h
	lua/customization/vec3.hpp
	lua/ErrorFormatter.cpp
	lua/ErrorFormatter.h
	lua/LocalLuaParser.cpp
	lua/LocalLuaParser.h
	lua/LocalModHandler.cpp
	lua/LocalModHandler.h
	lua/LuaKeybindHandler.cpp
	lua/LuaKeybindHandler.h
	lua/LuaMod.cpp
	lua/LuaMod.h
	lua/LuaParser.cpp
	lua/LuaParser.h
	lua/modules/BaseModule.h
	lua/modules/create_structure.h
	lua/modules/mSetGui.h
	lua/modules/mStartGame.h
	lua/modules/Register.cpp
	lua/modules/Register.h
	lua/modules/SubgameModule.cpp
	lua/modules/SubgameModule.h
	lua/modules/Time.cpp
	lua/modules/Time.h
	lua/register/CreateBlockModel.cpp
	lua/register/CreateBlockModel.h
	lua/register/RegisterBiomes.h
	lua/register/RegisterBlocks.h
	lua/register/RegisterItems.h
	lua/register/RegisterKeybinds.h
	lua/ServerLuaParser.cpp
	lua/ServerLuaParser.h
	lua/ServerModHandler.cpp
	lua/ServerModHandler.h
	lua/usertype/cAnimationManager.h
		lua/usertype/cLuaEntity.h
	lua/usertype/LocalLuaAnimationManager.cpp
	lua/usertype/LocalLuaAnimationManager.h
	lua/usertype/LocalLuaEntity.cpp
	lua/usertype/LocalLuaEntity.h
	lua/usertype/Player.cpp
	lua/usertype/Player.h
	lua/usertype/LuaGuiElement.cpp
	lua/usertype/LuaGuiElement.h
        lua/usertype/ItemStack.cpp
        lua/usertype/ItemStack.h
	lua/usertype/ServerLocalLuaEntity.cpp
	lua/usertype/ServerLocalLuaEntity.h
	lua/usertype/ServerLuaEntity.cpp
	lua/usertype/ServerLuaEntity.h
	lua/usertype/Inventory.cpp
	lua/usertype/Inventory.h
	lua/usertype/InventoryList.cpp
	lua/usertype/InventoryList.h
	lua/usertype/sLuaEntity.h
	net/Address.h
	net/client/ClientNetworkInterpreter.cpp
	net/client/ClientNetworkInterpreter.h
	net/client/ServerConnection.cpp
	net/client/ServerConnection.h
	net/Deserializer.h
	net/NetHandler.cpp
	net/NetHandler.h
	net/NetState.h
	net/Packet.cpp
	net/Packet.h
		net/PacketView.cpp
	net/PacketView.h
	net/Serializer.h
	net/server/asset/AssetStorage.h
	net/server/asset/AssetType.h
	net/server/asset/ServerTexture.h
	net/server/config/ServerConfig.cpp
	net/server/config/ServerConfig.h
	net/server/conn/ServerClients.cpp
	net/server/conn/ServerClients.h
	net/server/conn/ServerPlayer.cpp
	net/server/conn/ServerPlayer.h
	net/server/LocalServerInstance.cpp
	net/server/LocalServerInstance.h
	net/server/Server.cpp
	net/server/Server.h
	net/server/world/ServerEntity.cpp
	net/server/world/ServerEntity.h
	net/server/world/ServerGenStream.cpp
	net/server/world/ServerGenStream.h
	net/server/world/ServerPacketStream.cpp
	net/server/world/ServerPacketStream.h
	net/server/world/ServerWorld.cpp
	net/server/world/ServerWorld.h
	StartGame.h
	util/Any.h
	util/Interp.h
	util/Log.h
	util/Mat4Conv.h
	util/Ray.cpp
	util/Ray.h
	util/RIE.h
	util/Space.h
	util/Timer.cpp
	util/Timer.h
	util/Util.h
	util/Vec.h
	util/Voronoi3D.cpp
	util/Voronoi3D.h
	world/chunk/Chunk.cpp
	world/chunk/Chunk.h
	world/chunk/MapBlock.cpp
	world/chunk/MapBlock.h
	world/chunk/Region.cpp
	world/chunk/Region.h
	world/Dimension.cpp
	world/Dimension.h
	world/DimensionBase.cpp
	world/DimensionBase.h
	world/fs/FileManipulator.cpp
	world/fs/FileManipulator.h
	world/LocalDimension.cpp
	world/LocalDimension.h
	world/Target.h
	world/ServerDimension.cpp
	world/ServerDimension.h
	lua/usertype/Target.cpp
	lua/usertype/Target.h
	lua/usertype/BaseUsertype.h
	lua/usertype/SubgameUsertype.h
	world/Target.cpp
		lua/usertype/Dimension.cpp
		lua/usertype/Dimension.h
		game/scene/world/Player.cpp
	game/scene/world/Player.h
	game/inventory/InventoryRefs.cpp
	game/inventory/InventoryRefs.h
	game/inventory/Inventory.cpp
	game/inventory/Inventory.h
	game/entity/Entity.cpp
	game/entity/Entity.h
	game/entity/Collision.cpp
	game/entity/Collision.h
	net/server/conn/ServerClient.cpp
	net/server/conn/ServerClient.h lua/modules/Dimension.cpp lua/modules/Dimension.h util/CovariantPtr.h)